  or IRC channel if you are interested in using this format. We will make
  end user documentation available closer to blessing the format as
  production ready. (Robert Collins, John Arbash Meinel, Ian Clatworthy,
  Vincent Ladeuil, Andrew Bennetts, Martin Pool)

* Tildes are no longer escaped. No more %7Euser/project/branch!
  (Jonathan Lange)

Bug Fixes
*********

* Authentication plugins now receive all the parameters from the request
  itself (aka host, port, realm, path, etc). Previously, only the 
  authentication section name, username and encoded password were 
  provided. (Jean-Francois Roy)

* bzr gives a better message if an invalid regexp is passed to ``bzr log
  -m``.  (Anne Mohsen, Martin Pool)

* Fix "is not a stackable format" error when pushing a
  stackable-format branch with an unstackable-format repository to a
  destination with a default stacking policy.  (Andrew Bennetts)

* Fixed incorrect "Source format does not support stacking" warning
  when pushing to a smart server.  (Andrew Bennetts, #334114)

* Fix 'make check-dist-tarball' failure by converting paths to unicode when
  needed. (Vincent Ladeuil, #355454)

* Fixed "Specified file 'x/y/z' is outside current view: " occurring
  on ``bzr add x/y/z`` in formats supporting views when no view is
  defined.  (Ian Clatworthy, #344708)

* It is no longer possible to fetch between repositories while the
  target repository is in a write group. This prevents race conditions
  that prevent the use of RPC's to perform fetch, and thus allows
  optimising more operations. (Robert Collins, Andrew Bennetts)

* ``merge --force`` works again. (Robert Collins, #342105)

* No more warnings are issued about ``sha`` being deprecated under python-2.6.
  (Vincent Ladeuil, #346593)

* Pushing a new branch to a server that has a stacking policy will now
  upgrade from the local branch format when the stacking policy points at
  a branch which is itself stackable, because we know the client can read